--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <% for( let index = 0; index < products.length; index++ ) { %>
         <div class="column has-text-centered">
             <ul>
-                <li><%= products[index].name %></li>
+                <li><a href="/store/<%= products[index]._id %>"><%= products[index].name %></a></li>
                 <li><a href="<%= products[index].img %>">Image</a></li>
                 <li><%= products[index].description %></li>
                 <li>$<%= products[index].price %></li>
