--- a/views/show.ejs
+++ b/views/show.ejs
@@ -50,6 +50,12 @@
             </ul>
         </div>
     </div>
+    
+    <div class="buttons are-medium is-centered">
+        <button class="button">Buy Me!</button>
+    </div>
+    
+
 </div>
 </body>
 </html>
