--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="container">
-    <section class="hero is-small is-primary">
+    <section class="hero is-small is-warning">
         <div class="hero-body">
           <p class="title">
             <%= product.name %> 
@@ -17,7 +17,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary" href="/store">
+                <a class="button is-warning" href="/store">
                     <strong>Home</strong>
                   </a>
                 <a class="button is-light" href="/store/<%= product._id %>/edit">
