--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="container">
-    <section class="hero is-small is-primary">
+    <section class="hero is-small is-success">
         <div class="hero-body">
           <p class="title">
             Add New Product
@@ -17,7 +17,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary" href="/store">
+                <a class="button is-success" href="/store">
                     <strong>Home</strong>
                   </a>
               </div>
