--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,3 +3,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mongoose Store</title>
 <link rel="stylesheet" href="/css/styles.css">
+<script src="/js/app.js"></script>
